[tool.poetry]
name = "io-cpu-bound-performance-analysis"
version = "0.1.0"
description = ""
authors = ["NatalicioNasciment22 <natalicio.eng.soft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
httpx = "^0.27.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
